[metadata]
# replace with your username:
name = nonebot-plugin-picsearcher
version = 0.1.10
keywords = nonebot
author = synodriver
author_email = diguohuangjiajinweijun@gmail.com
description = A picsearch plugin for nonebot2
long_description = file: README.markdown
long_description_content_type = text/markdown
url = https://github.com/synodriver/nonebot_plugin_picsearcher
project_urls =
    Bug Tracker = https://github.com/synodriver/nonebot_plugin_picsearcher/issues
classifiers =
    Framework :: AsyncIO
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python"
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython


[options]
include_package_data = True
packages = find:
python_requires = >=3.7